--- a/output.css
+++ b/output.css
@@ -558,39 +558,10 @@ video {
   width: 100%;
 }
 
-@media (min-width: 640px) {
+@media (min-width: 412px) {
   .container {
-    max-width: 640px;
+    max-width: 412px;
   }
-}
-
-@media (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .container {
-    max-width: 1024px;
-  }
-}
-
-@media (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-  }
-}
-
-@media (min-width: 1536px) {
-  .container {
-    max-width: 1536px;
-  }
-}
-
-.my-20 {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
 }
 
 .mb-5 {
@@ -611,10 +582,6 @@ video {
 
 .h-\[80px\] {
   height: 80px;
-}
-
-.w-\[220px\] {
-  width: 220px;
 }
 
 .w-full {
@@ -662,6 +629,11 @@ video {
 .bg-\[\#E0F1E7\] {
   --tw-bg-opacity: 1;
   background-color: rgb(224 241 231 / var(--tw-bg-opacity));
+}
+
+.bg-green-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(20 83 45 / var(--tw-bg-opacity));
 }
 
 .bg-white {
@@ -717,10 +689,6 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.accent-emerald-100 {
-  accent-color: #d1fae5;
-}
-
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -731,7 +699,25 @@ video {
   border-color: rgb(134 239 172 / var(--tw-border-opacity));
 }
 
-.active\:border-green-300:active {
-  --tw-border-opacity: 1;
-  border-color: rgb(134 239 172 / var(--tw-border-opacity));
+.hover\:bg-green-950:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(5 46 22 / var(--tw-bg-opacity));
+}
+
+@media (min-width: 412px) {
+  .sm\:mt-20 {
+    margin-top: 5rem;
+  }
+
+  .sm\:mt-32 {
+    margin-top: 8rem;
+  }
+
+  .sm\:mt-24 {
+    margin-top: 6rem;
+  }
+
+  .sm\:mt-28 {
+    margin-top: 7rem;
+  }
 }
