--- a/output.css
+++ b/output.css
@@ -564,12 +564,40 @@ video {
   }
 }
 
+.fixed {
+  position: fixed;
+}
+
+.left-1\/2 {
+  left: 50%;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .mb-5 {
   margin-bottom: 1.25rem;
 }
 
+.mr-1 {
+  margin-right: 0.25rem;
+}
+
 .mt-2 {
   margin-top: 0.5rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
 }
 
 .block {
@@ -580,12 +608,53 @@ video {
   display: flex;
 }
 
+.hidden {
+  display: none;
+}
+
+.h-5 {
+  height: 1.25rem;
+}
+
 .h-\[80px\] {
   height: 80px;
 }
 
+.w-5 {
+  width: 1.25rem;
+}
+
+.w-\[100\%\] {
+  width: 100%;
+}
+
 .w-full {
   width: 100%;
+}
+
+.w-\[1\%\] {
+  width: 1%;
+}
+
+.w-\[\%\] {
+  width: %;
+}
+
+.w-\[200\%\%\] {
+  width: 200%%;
+}
+
+.w-\[200\%\] {
+  width: 200%;
+}
+
+.-translate-x-1\/2 {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .cursor-pointer {
@@ -608,6 +677,14 @@ video {
   gap: 1rem;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
 .rounded-md {
   border-radius: 0.375rem;
 }
@@ -621,6 +698,11 @@ video {
   border-color: rgb(203 213 225 / var(--tw-border-opacity));
 }
 
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
 .bg-\[\#0C7D69\] {
   --tw-bg-opacity: 1;
   background-color: rgb(12 125 105 / var(--tw-bg-opacity));
@@ -631,6 +713,11 @@ video {
   background-color: rgb(224 241 231 / var(--tw-bg-opacity));
 }
 
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .bg-green-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(20 83 45 / var(--tw-bg-opacity));
@@ -639,6 +726,10 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.p-6 {
+  padding: 1.5rem;
 }
 
 .px-10 {
@@ -665,6 +756,10 @@ video {
   padding-left: 1.25rem;
 }
 
+.text-center {
+  text-align: center;
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -689,6 +784,12 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -705,19 +806,90 @@ video {
 }
 
 @media (min-width: 412px) {
-  .sm\:mt-20 {
-    margin-top: 5rem;
+  .sm\:left-2\/4 {
+    left: 50%;
   }
 
-  .sm\:mt-32 {
+  .sm\:left-2 {
+    left: 0.5rem;
+  }
+
+  .sm\:left-2\/3 {
+    left: 66.666667%;
+  }
+
+  .sm\:left-\[\] {
+    left: ;
+  }
+
+  .sm\:left-\[30\%\] {
+    left: 30%;
+  }
+
+  .sm\:left-\[20\%\] {
+    left: 20%;
+  }
+
+  .sm\:left-\[40\%\] {
+    left: 40%;
+  }
+
+  .sm\:my-28 {
+    margin-top: 7rem;
+    margin-bottom: 7rem;
+  }
+
+  .sm\:my-32 {
     margin-top: 8rem;
+    margin-bottom: 8rem;
   }
 
-  .sm\:mt-24 {
-    margin-top: 6rem;
+  .sm\:my-36 {
+    margin-top: 9rem;
+    margin-bottom: 9rem;
+  }
+
+  .sm\:mb-5 {
+    margin-bottom: 1.25rem;
   }
 
   .sm\:mt-28 {
     margin-top: 7rem;
+  }
+
+  .sm\:w-\[\] {
+    width: ;
+  }
+
+  .sm\:w-\[150\] {
+    width: 150;
+  }
+
+  .sm\:w-\[150\%\] {
+    width: 150%;
+  }
+
+  .sm\:w-\[1\%\] {
+    width: 1%;
+  }
+
+  .sm\:w-\[200\%\] {
+    width: 200%;
+  }
+
+  .sm\:w-\[120\%\] {
+    width: 120%;
+  }
+
+  .sm\:w-\[130\%\] {
+    width: 130%;
+  }
+
+  .sm\:w-\[140\%\] {
+    width: 140%;
+  }
+
+  .sm\:w-\[100\%\] {
+    width: 100%;
   }
 }
